test/files/neg/missing-param-type-tuple.check
missing-param-type-tuple.scala:3: error: missing parameter type
Note: The expected type requires a one-argument function accepting a 2-Tuple.
      Consider a pattern matching anonymous function, `{ case (a, b) =>  ... }`
  val x: ((Int, Int)) => Int = (a, b) => 0
                                ^
missing-param-type-tuple.scala:3: error: missing parameter type
  val x: ((Int, Int)) => Int = (a, b) => 0
                                   ^
missing-param-type-tuple.scala:5: error: missing parameter type
Note: The expected type requires a one-argument function accepting a 3-Tuple.
      Consider a pattern matching anonymous function, `{ case (param1, ..., param3) =>  ... }`
  val y: ((Int, Int, Int)) => Int = (a, b, !!) => 0
                                     ^
missing-param-type-tuple.scala:5: error: missing parameter type
  val y: ((Int, Int, Int)) => Int = (a, b, !!) => 0
                                        ^
missing-param-type-tuple.scala:5: error: missing parameter type
  val y: ((Int, Int, Int)) => Int = (a, b, !!) => 0
                                           ^
missing-param-type-tuple.scala:7: error: missing parameter type
Note: The expected type requires a one-argument function accepting a 3-Tuple.
      Consider a pattern matching anonymous function, `{ case (param1, ..., param3) =>  ... }`
  val z: ((Int, Int, Int)) => Int = (a, NotAVariablePatternName, c) => 0
                                     ^
missing-param-type-tuple.scala:7: error: missing parameter type
  val z: ((Int, Int, Int)) => Int = (a, NotAVariablePatternName, c) => 0
                                        ^
missing-param-type-tuple.scala:7: error: missing parameter type
  val z: ((Int, Int, Int)) => Int = (a, NotAVariablePatternName, c) => 0
                                                                 ^
8 errors found
